--- a/efteraar1.html
+++ b/efteraar1.html
@@ -130,20 +130,30 @@
 
     <div class="col fremgangsmaade">
         <h3>Fremgangsmåde</h3>
-        <p><strong>Forbered grønt</strong></p>
-          <p>Skær Hokkaido og gulerødder i tern (behold gerne skrællen på græskaret). Hak løg og hvidløg.</p>
-
-          <p><strong>Svits grøntsager</strong></p>
-          <p>Varm olie i en gryde og svits løg, hvidløg og ingefær kort. Tilsæt græskar og gulerødder, og steg 2–3 min.</p>
-
-          <p><strong>Kog suppen</strong></p>
-          <p>Hæld vand/bouillon over, så det dækker grøntsagerne. Lad det simre under låg i ca. 20 minutter, til det hele er mørt.</p>
-
-          <p><strong>Blend og smag til</strong></p>
-          <p>Blend suppen glat med en stavblender. Smag til med salt, peber og evt. lidt citron eller chili.</p>
-
-          <p><strong> Server</strong></p>
-          <p>Server med creme fraiche, lidt ristede græskarkerner eller et stykke brød til.</p>
+          <p>
+            <strong>Forbered grønt</strong> 
+            <br>
+            Skær Hokkaido og gulerødder i tern (behold gerne skrællen på græskaret). Hak løg og hvidløg.</p>
+      
+          <p>
+            <strong>Svits grøntsager</strong>
+            <br>
+            Varm olie i en gryde og svits løg, hvidløg og ingefær kort. Tilsæt græskar og gulerødder, og steg 2–3 min.</p>
+            <br>
+          <p>
+            <strong>Kog suppen</strong>
+            <br>
+            Hæld vand/bouillon over, så det dækker grøntsagerne. Lad det simre under låg i ca. 20 minutter, til det hele er mørt.</p>
+            <br>
+          <p>
+            <strong>Blend og smag til</strong>
+            <br>
+            Blend suppen glat med en stavblender. Smag til med salt, peber og evt. lidt citron eller chili.</p>
+            <br>
+          <p>
+            <strong> Server</strong>
+            <br>
+            Server med creme fraiche, lidt ristede græskarkerner eller et stykke brød til.</p>
     </div>
     </div>
     </div>
