--- a/foraar1.html
+++ b/foraar1.html
@@ -131,21 +131,39 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><b>Kog pastaen</b></p>
-        <p>Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
+        <p>
+        <strong>Kog pastaen</strong>
+        <br>
+        Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
 
-            <p><b>Lav pestoen</b></p>
-            <p>Blend ramsløg, olie, kerner, citron og lidt salt.</p>
+        <br>
 
-            <p><b>Forbered grøntsagerne</b></p>
-            <p>Snit spidskål fint og steg den hurtigt på en pande med lidt olie, indtil den falder sammen og bliver let karamelliseret.</p>
-            <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
+        <p>
+        <strong>Lav pestoen</strong>
+        <br>
+        Blend ramsløg, olie, kerner, citron og lidt salt.</p>
 
-            <p><b>Samle retten</b></p>
-            <p>Vend den kogte pasta med pesto, spidskål og tomater. Tilsæt lidt af pastavandet, hvis retten virker for tør.</p>
+        <br>
 
-            <p><b>Server</b></p>
-            <p>Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
+        <p>
+        <strong>Forbered grøntsagerne</strong>
+        <br>
+        Snit spidskål fint og steg den hurtigt på en pande med lidt olie, indtil den falder sammen og bliver let karamelliseret.</p>
+        <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
+
+        <br>
+
+        <p>
+        <strong>Samle retten</strong>
+        <br>
+        Vend den kogte pasta med pesto, spidskål og tomater. Tilsæt lidt af pastavandet, hvis retten virker for tør.</p>
+
+        <br>
+
+        <p>
+        <strong>Server</strong>
+        <br>
+        Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
       
     </div>
   </div>
