--- a/foraar2.html
+++ b/foraar2.html
@@ -126,20 +126,32 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Kog orzo</strong></p>
-            <p>Kog orzo efter anvisning på pakken. Gem lidt af kogevandet.</p>
+        <p>
+        <strong>Kog orzo</strong>
+        <br>
+        Kog orzo efter anvisning på pakken. Gem lidt af kogevandet.</p>
 
-            <p><strong>Tilbered tomater</strong></p>
-            <p>Skær tomaterne i halve.</p>
-            <p>Steg dem på en pande med lidt olivenolie og presset hvidløg i 3–4 minutter, til de bliver bløde og saftige.</p>
+        <br>
+        <p>
+        <strong>Tilbered tomater</strong>
+        <br>
+        Skær tomaterne i halve.</p>
+        <p>Steg dem på en pande med lidt olivenolie og presset hvidløg i 3-4 minutter, til de bliver bløde og saftige.</p>
 
-            <p><strong>Saml retten</strong></p>
-            <p>Vend den varme orzo med stegte tomater, spinat, revet citronskal og lidt citronsaft.</p>
-            <p>Tilsæt lidt af pastavandet, hvis det virker tørt.</p>
-            <p>Smag til med salt, peber og evt. ekstra citron.</p>
+        <br>
 
-            <p><strong>Server</strong></p>
-            <p>Top med revet parmesan og lidt ekstra olivenolie. Spis lun – gerne ude i solen.</p>
+        <p>
+        <strong>Saml retten</strong>
+        <br>
+        Vend den varme orzo med stegte tomater, spinat, revet citronskal og lidt citronsaft.</p>
+        <p>Tilsæt lidt af pastavandet, hvis det virker tørt.</p>
+        <p>Smag til med salt, peber og evt. ekstra citron.</p>
+
+        <br>
+
+        <p>
+        <strong>Server</strong>
+        Top med revet parmesan og lidt ekstra olivenolie. Spis lun - gerne ude i solen.</p>
     </div>
   </div>
 </div>
