--- a/foraar3.html
+++ b/foraar3.html
@@ -125,18 +125,28 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Kog nudlerne</strong></p>
-            <p>Kog nudlerne efter anvisning og skyl dem kort i koldt vand.</p>
+        <p>
+        <strong>Kog nudlerne</strong>
+        <br>
+        Kog nudlerne efter anvisning og skyl dem kort i koldt vand.</p>
 
-            <p><strong>Forbered grøntsager</strong></p>
-            <p>Skær porre i tynde ringe og radiser i fine skiver.</p>
-            <p>Steg porren i olie på en pande i 3–4 min, til den bliver blød og sødlig. Tilsæt radiser og steg med i 1 min.</p>
+        <br>
 
-            <p><strong>Vend det hele sammen</strong></p>
-            <p>Tilsæt nudler, sesamfrø, et skvæt soja og lidt citronsaft. Vend det hele sammen og smag til.</p>
+        <p>
+        <strong>Forbered grøntsager</strong>
+        Skær porre i tynde ringe og radiser i fine skiver.</p>
+        <p>Steg porren i olie på en pande i 3-4 min, til den bliver blød og sødlig. Tilsæt radiser og steg med i 1 min.</p>
 
-            <p><strong>Server</strong></p>
-            <p>Anret i skåle og drys evt. med ekstra sesam og lidt citron på toppen.</p>
+        <p>
+        <strong>Vend det hele sammen</strong>
+        Tilsæt nudler, sesamfrø, et skvæt soja og lidt citronsaft. Vend det hele sammen og smag til.</p>
+
+        <br>
+        
+        <p>
+        <strong>Server</strong>
+        <br>
+        Anret i skåle og drys evt. med ekstra sesam og lidt citron på toppen.</p>
 
       
     </div>
