--- a/sommer.html
+++ b/sommer.html
@@ -61,7 +61,7 @@
             <!--Tekst skal fylde 12 kol. på mobil og op efter 6 kol. -->
             <div class="col-12 col-sm-7">
                 <h1>Sommer</h1>
-                <p>Sommermånederne inviterer til madlavning i alle tempoer – hvad enten du laver noget simpelt til dig selv efter en lang dag, eller inviterer vennerne til aftensmad i gården eller parken. Maden må gerne være nem, frisk og fuld af farver.
+                <p>Sommermånederne inviterer til madlavning i alle tempoer - hvad enten du laver noget simpelt til dig selv efter en lang dag, eller inviterer vennerne til aftensmad i gården eller parken. Maden må gerne være nem, frisk og fuld af farver.
                 </p>
             </div>
             <!--Illustration til højre-->
