--- a/sommer2.html
+++ b/sommer2.html
@@ -130,20 +130,30 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Lav ærtemos</strong></p>
-            <p>Blend ærter med hvidløg, citron, olie, salt og peber – det må gerne være lidt groft.</p>
+        <p>
+        <strong>Lav ærtemos</strong>
+        <br>
+        Blend ærter med hvidløg, citron, olie, salt og peber - det må gerne være lidt groft.</p>
 
-            <p><strong>Forbered grønt</strong></p>
-            <p>Skær squash og tomat i skiver og steg dem kort på en varm pande.</p>
+        <br>
 
-            <p>Snit spidskål fint og vend med lidt citronsaft og salt.</p>
+        <p>
+        <strong>Forbered grønt</strong>
+        Skær squash og tomat i skiver og steg dem kort på en varm pande.</p>
+        <p>Snit spidskål fint og vend med lidt citronsaft og salt.</p>
 
-            <p><strong>Varm taco-skallerne</strong></p>
-            <p>Varm taco-skallerne i ovnen (husk at behold papet indeni, så de holder formen)</p>
-            <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
+        <br>
 
-            <p><strong>Saml dine tacos</strong></p>
-            <p>Fyld hver taco med ærtemos, spidskål og grillede grøntsager. Top evt. med hakket persille.</p>
+        <p>
+        <strong>Varm taco-skallerne</strong>
+        Varm taco-skallerne i ovnen (husk at behold papet indeni, så de holder formen)</p>
+        <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
+
+        <br>
+
+        <p>
+        <strong>Saml dine tacos</strong>
+        Fyld hver taco med ærtemos, spidskål og grillede grøntsager. Top evt. med hakket persille.</p>
 
 
     </div>
