--- a/vinter1.html
+++ b/vinter1.html
@@ -131,25 +131,46 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Snit grønt</strong></p>
-            <p>Skær porre i skiver og snit spidskål fint. Hak hvidløg.</p>
+            <p>
+            <strong>Snit grønt</strong>
+            <br>
+            Skær porre i skiver og snit spidskål fint. Hak hvidløg.</p>
 
-            <p><strong>Karamellisér porren</strong></p>
-            <p>Steg porreskiverne i olie på en varm pande i 5–6 minutter, til de bliver bløde og gyldne. Tag dem af og læg dem til side.</p>
+            <br>
 
-            <p><strong>Lav saucen</strong></p>
-            <p>Rør sojasauce, peanutbutter og hvidløg sammen. Tilsæt en smule varmt vand for at gøre den cremet.</p>
+            <p>
+            <strong>Karamellisér porren</strong>
+            <br>
+            Steg porreskiverne i olie på en varm pande i 5-6 minutter, til de bliver bløde og gyldne. Tag dem af og læg dem til side.</p>
+            
+            <br>
 
-            <p><strong>Steg kål</strong></p>
-            <p>Steg spidskål i samme pande i et par minutter – det skal stadig have lidt bid.
+            <p>
+            <strong>Lav saucen</strong>
+            <br>
+            Rør sojasauce, peanutbutter og hvidløg sammen. Tilsæt en smule varmt vand for at gøre den cremet.</p>
+            
+            <br>
+
+            <p>
+            <strong>Steg kål</strong>
+            <br>
+            Steg spidskål i samme pande i et par minutter - det skal stadig have lidt bid.
             </p>
 
-            <p><strong>Kog nudler</strong></p>
-            <p>Kog nudlerne som anvist og vend dem direkte i panden med kålen. Tilsæt saucen og rør det hele godt sammen.</p>
+            <br>
 
+            <p>
+            <strong>Kog nudler</strong>
+            <br>
+            Kog nudlerne som anvist og vend dem direkte i panden med kålen. Tilsæt saucen og rør det hele godt sammen.</p>
 
-            <p><strong>Server</strong></p>
-            <p>Top med den karamelliserede porre og drys evt. med sesamfrø og lidt citron.</p>
+            <br>
+
+            <p>
+            <strong>Server</strong>
+            <br>
+            Top med den karamelliserede porre og drys evt. med sesamfrø og lidt citron.</p>
     </div>
   </div>
 </div>
