--- a/vinter2.html
+++ b/vinter2.html
@@ -130,21 +130,35 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Kog pastaen</strong></p>
-            <p>Kog pastaen efter anvisning. Gem lidt af kogevandet.</p>
+      <p>
+      <strong>Kog pastaen</strong>
+      <br>
+      Kog pastaen efter anvisning. Gem lidt af kogevandet.</p>
 
-            <p><strong>Lav grønkålssaucen</strong></p>
-            <p>Skyl grønkål og hak den groft</p>
-            <p>Svits hvidløg i olie eller smør på en pande.</p>
-            <p>Tilsæt grønkål og lidt vand, og lad det dampe mørt i 5–6 min.</p>
-            <p>Rør madlavningsfløden i i og blend det hele til en cremet sauce. Justér med lidt pastavand hvis den er for tyk.</p>
+      <br>
+    
+      <p>
+      <strong>Lav grønkålssaucen</strong>
+      <br>
+      Skyl grønkål og hak den groft</p>
+      <p>Svits hvidløg i olie eller smør på en pande.</p>
+      <p>Tilsæt grønkål og lidt vand, og lad det dampe mørt i 5-6 min.</p>
+      <p>Rør madlavningsfløden i i og blend det hele til en cremet sauce. Justér med lidt pastavand hvis den er for tyk.</p>
 
+      <br>
 
-            <p><strong>Vend sammen</strong></p>
-            <p>Vend den varme pasta i saucen. Smag til med citronskal, lidt saft, salt og peber.</p>
+      <p>
+      <strong>Vend sammen</strong>
+      <br>
+      Vend den varme pasta i saucen. Smag til med citronskal, lidt saft, salt og peber.</p>
 
-            <p><strong>Server</strong></p>
-            <p>Top med lidt revet ost, solsikkekerner eller bare som den er – varm, cremet og grønt.</p>
+      <br>
+      
+      <p>
+      <strong>Server</strong>
+      <br>
+      Top med lidt revet ost, solsikkekerner eller bare som den er - varm, cremet og grønt.</p>
+
     </div>
   </div>
 </div>
