--- a/vinter3.html
+++ b/vinter3.html
@@ -128,20 +128,36 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Kog perlebyg</strong></p>
-            <p>Kog byggen efter anvisning på pakken (ca. 20 min). Hæld vandet fra, når den er mør.</p>
+        <p>
+        <strong>Kog perlebyg</strong>
+        <br>
+        Kog byggen efter anvisning på pakken (ca. 20 min). Hæld vandet fra, når den er mør.</p>
+        
+        <br>
 
-            <p><strong>Forbered grønt</strong></p>
-            <p>Skær svampe i skiver og snit løg fint. Riv grønkålen i mindre stykker (fjern de groveste stilke).</p>
+        <p>
+        <strong>Forbered grønt</strong>
+        <br>
+        Skær svampe i skiver og snit løg fint. Riv grønkålen i mindre stykker (fjern de groveste stilke).</p>
 
-            <p><strong>Steg svampe og løg</strong></p>
-            <p>Varm olie på en stor pande. Steg svampe og løg i 5–7 min, til de er bløde og let gyldne. Krydr med salt og peber.</p>
+        <p>
+        <strong>Steg svampe og løg</strong>
+        <br>
+        Varm olie på en stor pande. Steg svampe og løg i 5-7 min, til de er bløde og let gyldne. Krydr med salt og peber.</p>
 
-            <p><strong>Tilsæt grønkål</strong></p>
-            <p>Tilsæt den kogte byg og fløden til panden og vend det hele sammen. Varm igennem et par minutter. Smag til med salt, peber og evt. et skvæt citron.</p>
+        <br>
 
-            <p><strong>Server</strong></p>
-            <p>Top evt. med lidt revet ost, ristede solsikkekerner eller friske krydderurter.</p>
+        <p>
+        <strong>Tilsæt grønkål</strong>
+        <br>
+        Tilsæt den kogte byg og fløden til panden og vend det hele sammen. Varm igennem et par minutter. Smag til med salt, peber og evt. et skvæt citron.</p>
+
+        <br>
+
+        <p>
+        <strong>Server</strong>
+        <br>
+        Top evt. med lidt revet ost, ristede solsikkekerner eller friske krydderurter.</p>
     </div>
   </div>
 </div>
