--- a/efteraar3.html
+++ b/efteraar3.html
@@ -128,21 +128,38 @@
 
   <div class="col fremgangsmaade">
     <h3>Fremgangsmåde</h3>
-      <p><strong>Forbered grønt</strong></p>
-          <p>Skær porrer i tykke skiver (ca. 1 cm). Skræl gulerødder og skær dem i skrå skiver eller tynde stave. Hak hvidløg.
+          <p>
+          <strong>Forbered grønt</strong>
+          <br>
+          Skær porrer i tykke skiver (ca. 1 cm). Skræl gulerødder og skær dem i skrå skiver eller tynde stave. Hak hvidløg.
           </p>
 
-          <p><strong>Steg porrerne:</strong></p>
-          <p>Varm smør eller olie på en stor pande. Læg porreskiverne med snitfladen nedad og steg dem ved middel varme i 5–7 minutter, til de er gyldne. Vend dem og tilsæt honning/sukker. Lad dem karamellisere kort og tag dem af panden.</p>
+          <br>
 
-          <p><strong>Steg gulerødderne</strong></p>
-          <p>På samme pande: Steg gulerødder og hvidløg i lidt ekstra olie i 7–8 minutter, til de er møre men stadig har bid.</p>
+          <p>
+          <strong>Steg porrerne:</strong> 
+          <br>
+          Varm smør eller olie på en stor pande. Læg porreskiverne med snitfladen nedad og steg dem ved middel varme i 5-7 minutter, til de er gyldne. Vend dem og tilsæt honning/sukker. Lad dem karamellisere kort og tag dem af panden.</p>
 
-          <p><strong>Vend sammen</strong></p>
-          <p>Kom porrerne tilbage på panden og dryp med citronsaft. Smag til med salt, peber og evt. friske urter..</p>
+          <br>
 
-          <p><strong> Server</strong></p>
-          <p>Server som den er – eller med et stykke brød, lidt linser eller smuldret feta på toppen.</p>
+          <p>
+          <strong>Steg gulerødderne</strong>
+          <br>
+          På samme pande: Steg gulerødder og hvidløg i lidt ekstra olie i 7–8 minutter, til de er møre men stadig har bid.</p>
+          
+          <br>
+
+          <p>
+          <strong>Vend sammen</strong>
+          <br>
+          Kom porrerne tilbage på panden og dryp med citronsaft. Smag til med salt, peber og evt. friske urter..</p>
+          
+          <br>
+
+          <p>
+          <strong> Server</strong>
+          Server som den er - eller med et stykke brød, lidt linser eller smuldret feta på toppen.</p>
   </div>
 </div>
 </div>
