--- a/sommer3.html
+++ b/sommer3.html
@@ -129,21 +129,34 @@
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Forvarm ovnen</strong></p>
-            <p>Tænd ovnen efter anvisning på pizzadejen (typisk 220–250°C)..</p>
+      <p>
+      <strong>Forvarm ovnen</strong>
+      <br>
+      Tænd ovnen efter anvisning på pizzadejen (typisk 220-250°C)..</p>
 
-            <p><strong>Forbered grøntsager</strong></p>
-            <p>Skær squash og peberfrugt i tynde skiver. Halvér cherrytomater og skær rødløg i tynde både.</p>
+      <br>
 
-            <p><strong>Saml pizzaen</strong></p>
-            <p>Læg bunden på bagepapir. Smør tomatsauce ud i et tyndt lag.</p>
-            <p>SFordel grøntsager og ost jævnt ovenpå. Dryp med lidt olivenolie, og krydr med salt og peber.</p>
+      <p>
+      <strong>Forbered grøntsager</strong>
+      <br>
+      Skær squash og peberfrugt i tynde skiver. Halvér cherrytomater og skær rødløg i tynde både.</p>
 
-            <p><strong>Bag pizzaen</strong></p>
-            <p>Bag midt i ovnen i 10–12 minutter, eller til osten er gylden og bunden sprød.</p>
+      <p>
+      <strong>Saml pizzaen</strong>
+      <br>
+      Læg bunden på bagepapir. Smør tomatsauce ud i et tyndt lag.</p>
+      <p>SFordel grøntsager og ost jævnt ovenpå. Dryp med lidt olivenolie, og krydr med salt og peber.</p>
+    
+      <p>
+      <strong>Bag pizzaen</strong>
+      <br>
+      Bag midt i ovnen i 10-12 minutter, eller til osten er gylden og bunden sprød.</p>
 
-            <p><strong>Server</strong></p>
-            <p>Top med frisk basilikum </p>
+      <br>
+
+      <p>
+      <strong>Server</strong></p>
+      Top med frisk basilikum </p>
 
     </div>
   </div>
