--- a/kontakt.html
+++ b/kontakt.html
@@ -107,8 +107,8 @@
     
    <!-- teksten ovenpå "serviet" -->
     <div class="position-absolute top-0 start-0 p-5">
-      <div class="kontakt-tekst">
-        <h1>Kontakt os:</h1>
+      <div>
+        <h1 class="overskrift-kontakt">Kontakt os:</h1>
         <p>Telefon.nr.:
           <a href="tel:+45271478**">+45 27 14 78 **</a>
         </p>
