--- a/kontakt.html
+++ b/kontakt.html
@@ -84,7 +84,7 @@
           <a href="https://www.instagram.com/lille_skaal/" target="_blank">
             <i class="bi bi-instagram fs-4"></i>
           </a>
-          Følg med og se flere små glimt af vores univers 
+          Oplev mere af vores univers her
         </p>
       </div>
     </div>
