--- a/kontakt.html
+++ b/kontakt.html
@@ -53,7 +53,7 @@
 </nav>
 
 
-<div class="container py-5">
+<div class="custom-container py-5">
   <div class="row position-relative align-items-start">
     <div class="col-12 col-md-8">
       <picture>
@@ -67,12 +67,15 @@
     <div class="position-absolute top-0 start-0 p-5">
       <div>
         <h1 class="overskrift-kontakt">Kontakt os:</h1>
-        <p>Telefon.nr.:
-          <a href="tel:+45271478**">+45 27 14 78 **</a>
-        </p>
-        <p>Mail:
-          <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
-        </p>
+        <div class="row">
+          <p class="col-12 col-lg-6">Telefon.nr.:
+            <a href="tel:+45271478**">+45 27 14 78 **</a>
+          </p>
+          <p class="col-12 col-lg-6">Mail:
+            <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
+          </p>
+
+        </div>
         <p>Find os her:
           <br>
           <a href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x46524e6d778cb02b:0x7e3ab7668df86d7c?sa=X&ved=1t:8290&ictx=111">Firskovvej 18, 2800 Kongens Lyngby</a>
