--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--NAVIGATIONSBAR-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
   <div class="container-fluid">
-    <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
+    <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -74,9 +74,13 @@
         <!--w-100 h-100: gør overlay lige så stort som billedet-->
         <!--d-flex ....: centrerer tekst midt i billedet-->
         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
-            <img class="logo-forside" src="img/logo.png" alt="">
-            <h1>Lille Skål</h1>
-            <h4 class="call-to-action"><a href="alleopskrifter.html">Opskrifter til små køkkener og store smage ></a></h4>
+            <img class="logo-forside" src="img/logovandmaling.png" alt="">
+            <h4 class="call-to-action"><a href="alleopskrifter.html">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/opskriftknapstor.png">
+                <img src="img/opskriftknapmobil.png" alt="">
+              </picture>
+              </a></h4>
         </div>
 </div>
 
