--- a/foraar3.html
+++ b/foraar3.html
@@ -129,7 +129,7 @@
         <!--- 
         På små skærme (mobil): vis indholdet under hinanden (flex-column)
         På store skærme og op (fra 992px): vis indholdet ved siden af hinanden (flex-lg-row)-->
-        <div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
+        <div class="row align-items-start d-flex flex-column flex-lg-row">
           <div class="col collage-opskrift-container">
             <!--Ingredienser til opskrift-->
             <div class="ingredienser">
@@ -150,6 +150,7 @@
             <img src="img/foraar/foraar3ny.png" class="billede opskrift-billede2" alt="">
             <img src="img/foraar/foraaar.png" class="billede opskrift-billede3" alt="">
           </div>
+
 
           <!--Fremgangsmåde-->
           <div class="col fremgangsmaade">
@@ -181,18 +182,14 @@
               <br>
               Anret i skåle og drys evt. med ekstra sesam og lidt citron på toppen.
             </p>
-
-
           </div>
         </div>
       </div>
-
+    </div>
   </section>
 
-  </div>
 
-
-   <!-- ===========================
+  <!-- ===========================
        MUSIK
        =========================== -->
   <section class="custom-container playlist-section my-5">
@@ -239,7 +236,7 @@
   <!-- ===========================
        KOMMENTARSPOR
        =========================== -->
-       <!--
+  <!--
       På små skærme (mobil): vis indholdet under hinanden (flex-column)
       Fra små skærme (576px) og op: vis dem ved siden af hinanden (flex-sm-row)-->
   <div class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
