--- a/sommer3.html
+++ b/sommer3.html
@@ -186,17 +186,16 @@
 
             <p>
               <strong>Server</strong>
+              <br>
+              Top med frisk basilikum
             </p>
-            Top med frisk basilikum </p>
+
 
           </div>
         </div>
       </div>
-
+    </div>
   </section>
-
-  </div>
-
 
 
   <!-- ===========================
