--- a/kontakt.html
+++ b/kontakt.html
@@ -132,10 +132,7 @@
        =========================== -->
 <div class="orange py-5">
     <div class="logo-hero d-flex justify-content-center">
-        <img src="img/logo.png" alt="logo">
-    </div>
-    <div class=" text-center">
-        <h1>Lille skål</h1>
+        <img src="img/logovandmaling.png" alt="logo">
     </div>
 </div>
 
